# bingo-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: caller.rs  card.rs  lib.rs  rand.rs
src/caller/: mod.rs
src/caller/rand/: mod.rs  tests.rs
src/card/: mod.rs  tests.rs
src/card/rand/: mod.rs  tests.rs
tests/: test.rs
