[package]
name = "bingo"
version = "0.2.0"
authors = ["Nabla"]
edition = "2021"
description = "A bingo library"
readme = "README.md"
repository = "https://gitlab.com/anynabla/bingo"
license = "MIT"

[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.5"

[[test]]
name = "test"
required-features = ["rand"]
