[package]
name = "bingo"
version = "0.3.1"
authors = ["Harenayo"]
edition = "2021"
description = "A crate for bingo"
readme = "README.md"
repository = "https://github.com/harenayo/bingo-rs"
license = "MIT"

[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.5"

[[test]]
name = "test"
required-features = ["rand"]
